fix(General Styles): Fix text wrap and overflow

--- a/components/aisleBag/styles.module.css
+++ b/components/aisleBag/styles.module.css
@@ -4,11 +4,13 @@
   display: inline-flex;
   border-radius: 100px;
   overflow: hidden;
+  max-width: 100%;
 }
 
 .aisleNumber {
   background-color: var(--p2-color);
   width: 80px;
+  min-width: 80px;
   display: flex;
   flex-direction: column;
   color: white;
@@ -20,10 +22,16 @@
 }
 
 .aisleName {
-  padding: 0 20px 0 10px;
+  padding: 0 18px 0 10px;
   display: flex;
   justify-content: center;
   align-items: center;
+  max-width: calc(100% - 80px);
+  box-sizing: border-box;
+}
+
+.aisleName p {
+  white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
 }
